Revert "fix(ui/button): reduce primary-{hover,active} contrast"
This reverts commit 497988d679c621aa70d9502858b16d42b7ca933f.

--- a/client/src/ui/_vars.scss
+++ b/client/src/ui/_vars.scss
@@ -164,8 +164,8 @@ $mdn-theme-light-border-primary: $mdn-color-neutral-20;
 $mdn-theme-light-border-secondary: $mdn-color-neutral-20;
 $mdn-theme-light-border-success: $mdn-color-light-theme-green-20;
 $mdn-theme-light-button-primary-default: $mdn-color-neutral-90;
-$mdn-theme-light-button-primary-hover: $mdn-color-neutral-20;
-$mdn-theme-light-button-primary-active: $mdn-color-neutral-30;
+$mdn-theme-light-button-primary-hover: $mdn-color-neutral-60;
+$mdn-theme-light-button-primary-active: $mdn-color-neutral-40;
 $mdn-theme-light-button-primary-inactive: $mdn-color-neutral-90;
 $mdn-theme-light-button-secondary-default: $mdn-color-white;
 $mdn-theme-light-button-secondary-hover: $mdn-color-neutral-20;
@@ -210,8 +210,8 @@ $mdn-theme-dark-border-primary: $mdn-color-neutral-50;
 $mdn-theme-dark-border-secondary: $mdn-color-neutral-60;
 $mdn-theme-dark-border-success: $mdn-color-dark-theme-green-20;
 $mdn-theme-dark-button-primary-default: $mdn-color-white;
-$mdn-theme-dark-button-primary-hover: $mdn-color-neutral-80;
-$mdn-theme-dark-button-primary-active: $mdn-color-neutral-70;
+$mdn-theme-dark-button-primary-hover: $mdn-color-neutral-20;
+$mdn-theme-dark-button-primary-active: $mdn-color-neutral-40;
 $mdn-theme-dark-button-primary-inactive: $mdn-color-white;
 $mdn-theme-dark-button-secondary-default: $mdn-color-neutral-70;
 $mdn-theme-dark-button-secondary-hover: $mdn-color-neutral-50;
